--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,20 @@
 </head>
 <body>
   <h1>My Recipes!!!</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr th:each="recipe : ${recipes}">
+      <td th:text="${recipe.id}">1</td>
+      <td th:text="${recipe.description}">description</td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </html>
