--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -17,6 +19,7 @@
           crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
+<!--/*@thymesVar id="recipe" type="com.yuancheng.springrecipeapp.models.Recipe"*/-->
 <div class="container-fluid" style="margin-top: 20px">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -34,7 +37,7 @@
                 <ul>
                   <li th:remove="all">cat one</li>
                   <li th:remove="all">cat two</li>
-                  <li th:each="category: ${recipe.categories}" th:text="${category.description}">cat three</li>
+                  <li th:each="category : ${recipe.categories}" th:text="${category.getDescription()}">cat three</li>
                 </ul>
               </div>
             </div>
@@ -43,7 +46,7 @@
                 <h5>Prep Time:</h5>
               </div>
               <div class="col-md-3">
-                <p th:text="${recipe.prepTime + ' min'}">30 min</p>
+                <p th:text="${(recipe.prepTime) +  '  Min'}">30 min</p>
               </div>
               <div class="col-md-3">
                 <h5>Difficulty:</h5>
@@ -57,7 +60,7 @@
                 <h5>Cooktime:</h5>
               </div>
               <div class="col-md-3">
-                <p th:text="${recipe.cookTime + ' min'}">30 min</p>
+                <p th:text="${(recipe.cookTime  +  '  Min')}">30 min</p>
               </div>
               <div class="col-md-3">
                 <h5>Servings:</h5>
@@ -77,14 +80,21 @@
                 <h5>URL:</h5>
               </div>
               <div class="col-md-3">
-                <p th:text="${recipe.url}">http://www.example.com</p>
+                <p><a href="#" th:href="@{recipe.url}" >View Original</a></p>
               </div>
             </div>
           </div>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h1 class="panel-title" >Ingredients</h1>
+            <div class="row">
+              <div class="col-md-11 ">
+                <h1 class="panel-title">Ingredients</h1>
+              </div>
+              <div class="col-md-1">
+                <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>
+              </div>
+            </div>
           </div>
           <div class="panel-body">
             <div class="row">
@@ -92,8 +102,10 @@
                 <ul>
                   <li th:remove="all">1 Cup of milk</li>
                   <li th:remove="all">1 Teaspoon of chocolate</li>
-                  <li th:each="ingreident : ${recipe.ingredients}"
-                      th:text="${ingreident.amount + ' ' + ingreident.uom.description + ' - ' + ingreident.description}">1 Teaspoon of Sugar</li>
+                  <li th:each="ingredient : ${recipe.ingredients}"
+                      th:text="${(ingredient.getAmount() +
+                                        ' ' + ingredient.uom.getDescription() +
+                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>
                 </ul>
               </div>
             </div>
