--- a/src/main/resources/templates/recipe/ingredient/show.html
+++ b/src/main/resources/templates/recipe/ingredient/show.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <title>List Ingredients</title>
+  <meta charset="UTF-8">
+  <title><!DOCTYPE html>
+    <html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <head>
+    <meta charset="UTF-8"/>
+    <title>View Ingredient</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -17,36 +21,25 @@
           crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<!--/*@thymesVar id="recipe" type="com.yuancheng.springrecipeapp.models.Recipe"*/-->
-<!--/*@thymesVar id="ingredients" type="java.util.Set<com.yuancheng.springrecipeapp.commands.IngredientCommand>"*/-->
+<!--/*@thymesVar id="ingredient" type="com.yuancheng.springrecipeapp.commands.IngredientCommand"*/-->
 <div class="container-fluid" style="margin-top: 20px">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-primary">
 
         <div class="panel-heading">
-          <h1 class="panel-title">Ingredients</h1>
+          <h1 class="panel-title">Ingredient</h1>
         </div>
         <div class="panel-body">
 
-          <div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
+          <div class="table-responsive">
             <table class="table table-hover ">
               <thead class="thead-inverse">
               <tr>
                 <th>ID</th>
                 <th>Description</th>
-                <th>View</th>
-                <th>Update</th>
-                <th>Delete</th>
               </tr>
               </thead>
-              <tr th:remove="all">
-                <td>123</td>
-                <td>Tasty Goodnees 1</td>
-                <td><a href="#">View</a></td>
-                <td><a href="#">Update</a></td>
-                <td><a href="#">Delete</a></td>
-              </tr>
               <tr th:remove="all">
                 <td>12333</td>
                 <td>Tasty Goodnees 2</td>
@@ -54,12 +47,9 @@
                 <td><a href="#">Update</a></td>
                 <td><a href="#">Delete</a></td>
               </tr>
-              <tr th:each="ingredient : ${recipe.ingredients}">
+              <tr>
                 <td th:text="${ingredient.id}">334</td>
-                <td th:text="${ingredient.amount} + ' ' + ${ingredient.unitOfMeasure.getDescription()} + ' ' + ${ingredient.description} + '/show'">Tasty Goodnees 3</td>
-                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients/' + ${ingredient.id} + '/show'}">View</a></td>
-                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients/' + ${ingredient.id} + '/update'}">Update</a></td>
-                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients/' + ${ingredient.id} + '/delete'}">Delete</a></td>
+                <td th:text="${ingredient.amount} + ' ' + ${ingredient.unitOfMeasure.getDescription()} + ' ' + ${ingredient.description}">Tasty Goodnees 3</td>
               </tr>
             </table>
           </div>
@@ -69,5 +59,10 @@
   </div>
 </div>
 
+</body>
+</html></title>
+</head>
+<body>
+.
 </body>
 </html>
