--- a/src/main/resources/templates/recipe/recipeForm.html
+++ b/src/main/resources/templates/recipe/recipeForm.html
@@ -34,7 +34,7 @@
             <div class="panel-body">
               <div class="row">
                 <div class="col-md-3 form-group" th:classappend="${#fields.hasErrors()} ? 'has-error' : ''">
-                  <label>Recipe Description:</label>
+                  <label th:text="#{recipe.description}">Recipe Description:</label>
                   <input type="text" class="form-control" th:field="*{description}" th:errorClass="has-error"/>
                   <span class="help-block" th:if="${#fields.hasErrors('description')}">
                     <ul>
