refactor unitofMeasure to uom, generated database scheme from Hibernate

--- a/src/main/resources/templates/recipe/ingredient/ingredientForm.html
+++ b/src/main/resources/templates/recipe/ingredient/ingredientForm.html
@@ -51,7 +51,7 @@
                   <select class="form-control" name="unitOfMeasure.id">
                     <option th:each="uomEach : ${uomList}"
                             th:value="${uomEach.id}"
-                            th:selected="${uomEach.id.equals(ingredient.unitOfMeasure.id)}"
+                            th:selected="${uomEach.id.equals(ingredient.getUom.id)}"
                             th:text="${uomEach.description}">Each</option>
                   </select>
                 </div>
